--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,34 @@
 
 
 /* footer */
+#footer 
+{
+    position:absolute;
+    bottom:0;
+    width:100%;
+}
 .footer-background-color {
-    background-color: #696969;
+    background-color: #2c2f33;
+}
+
+.footer-background-color2 {
+    background-color: #23272a;
+}
+
+.footer-fontsize
+{   
+    font-size: 25px;
+    color: whitesmoke;
+}
+
+/* homepage */
+.home-background-color {
+    background-color: #99aab5;
+}
+.container-fluid {
+    width: 100%;
+    padding-right: 0%;
+    padding-left: 0%;
+    margin-right: auto;
+    margin-left: auto;
 }
