--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* standaard styling */
 .lettertype
 {
-    font-family: 'Lateef', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 ul {
     list-style-type: none;
