--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ ul {
   
   li a {
     display: block;
-    color: #000;
-    padding: 8px 16px;
+    color: #ffffff;
+    padding: 3px 8px;
     text-decoration: none;
   }
   
