--- a/css/style.css
+++ b/css/style.css
@@ -60,13 +60,11 @@ ul {
 }
 
 /* homepage */
-.home-background-color {
-    background-color: #99aab5;
+
+.home-margin-top {
+    margin-top: 50px ;
 }
-.container-fluid {
-    width: 100%;
-    padding-right: 0%;
-    padding-left: 0%;
-    margin-right: auto;
-    margin-left: auto;
+
+.home-margin-bottom {
+    margin-bottom: 50px;
 }
