--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,60 @@
 /* standaard styling */
-.lettertype
-{
+
+.lettertype {
     font-family: 'Roboto', sans-serif;
 }
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 200px;
-    color: #f1f1f1;
-  }
-  
-  li a {
+    color: #000000;
+}
+
+li a {
     display: block;
     color: #ffffff;
     padding: 3px 8px;
     text-decoration: none;
-  }
-  
-  /* Change the link color on hover */
-  li a:hover {
+}
+
+/* Change the link color on hover */
+
+li a:hover {
     color: #ffffff;
-  }
+}
 
 /* navbar */
-.navbar-background-color
-{
+
+.navbar-background-color {
     background-color: #8B0000;
 }
-.navbar-fontsize
-{
+
+.navbar-fontsize {
     font-size: 17px;
 }
 
-.navbar-login
-{
+.navbar-login {
     font-size: 12px;
 }
 
-.nav
-{
+.nav {
     display: inline-block;
 }
 
-.brand-logo
-{
+.brand-logo {
     height: 50px;
 }
 
-
 /* footer */
-#footer 
-{
-    position:absolute;
-    bottom:0;
-    width:100%;
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
+
 .footer-background-color {
     background-color: #2c2f33;
 }
@@ -64,27 +63,24 @@ ul {
     background-color: #23272a;
 }
 
-.footer-fontsize
-{   
+.footer-fontsize {
     font-size: 15px;
     color: whitesmoke;
 }
 
-
 /* homepage */
 
 .home-margin-top {
-    margin-top: 50px ;
+    margin-top: 50px;
 }
 
 .home-margin-bottom {
     margin-bottom: 50px;
 }
 
-.home-card-footer 
-{
+.home-card-footer {
     background-color: #8B0000;
-} 
+}
 
 .home-carousel-border {
     border-style: solid;
@@ -94,11 +90,11 @@ ul {
 
 .home-img {
     border-radius: 8px;
-  }
+}
 
 .card {
     border-radius: 30px;
-}  
+}
 
 /* Registratie */
 
@@ -108,10 +104,19 @@ ul {
 }
 
 .registratie-container {
-    margin-top: 30px ;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
-.registratie-button{
+
+.registratie-button {
     background-color: #8B0000;
     color: #ffffff;
+}
+
+/* Informatie */
+
+
+
+.info-margin-bot {
+    margin-bottom: 30px;
 }
