--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ li a {
     text-decoration: none;
 }
 
+.form-container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 /* Change the link color on hover */
 
 li a:hover {
@@ -50,7 +55,7 @@ li a:hover {
 /* footer */
 
 #footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
@@ -117,11 +122,6 @@ li a:hover {
     border-color: #23272a;
 }
 
-.registratie-container {
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
 .registratie-button {
     background-color: #8B0000;
     color: #ffffff;
@@ -138,4 +138,15 @@ li a:hover {
 
 .info-card-footer {
     background-color: #8B0000;
+}
+
+/* login */
+.login-border {
+    border-style: solid;
+    border-color: #23272a;
+}
+
+.login-button {
+    background-color: #8B0000;
+    color: #ffffff;
 }
