--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,13 @@ li a:hover {
     color: #ffffff;
 }
 
+.registratie-margin-top {
+    margin-top: 50px;
+}
+
+.registratie-margin-bottom {
+    margin-bottom: 50px;
+}
 /* Informatie */
 
 
