--- a/css/style.css
+++ b/css/style.css
@@ -180,3 +180,10 @@ li a:hover {
     width: 100%;
     height: 700px;
 }
+
+/* register */
+.register
+{
+background-color: #8B0000;
+color: #ffffff;
+}
