--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,18 @@ li a:hover {
 {
     width: 100%;
     height: 700px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.split
+{
+    background-color: #8B0000;
+}
+
+.handleiding-margin
+{
+    margin-top: 10px;
 }
 
 /* register */
